[gd_scene load_steps=9 format=3 uid="uid://cmu6k1l0537al"]

[ext_resource type="Script" path="res://scripts/wizzerWeapon.gd" id="1_tryah"]
[ext_resource type="Texture2D" uid="uid://bawfbabpl6n7l" path="res://assets/weapons/lifeStaff.png" id="2_ianua"]
[ext_resource type="Texture2D" uid="uid://bpkhpxsyld3mu" path="res://assets/effects/radius.png" id="3_612eq"]

[sub_resource type="Animation" id="Animation_ovuy2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("primaryWeapon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("secondaryWeapon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("secondaryWeapon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("secondaryWeapon/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gv1f5"]
resource_name = "primary"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("primaryWeapon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_7jqid"]
resource_name = "secondary"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("secondaryWeapon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(10, 10), Vector2(10, 10), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("secondaryWeapon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("secondaryWeapon/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xru0u"]
_data = {
"RESET": SubResource("Animation_ovuy2"),
"primary": SubResource("Animation_gv1f5"),
"secondary": SubResource("Animation_7jqid")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_futru"]
radius = 4.0

[node name="wizzerWeapon" type="Node2D" groups=["weapon"]]
script = ExtResource("1_tryah")

[node name="weaponAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xru0u")
}

[node name="primaryWeapon" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ianua")

[node name="secondaryWeapon" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_612eq")

[node name="Area2D" type="Area2D" parent="secondaryWeapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secondaryWeapon/Area2D"]
shape = SubResource("CircleShape2D_futru")
disabled = true

[connection signal="body_entered" from="secondaryWeapon/Area2D" to="." method="_on_area_2d_body_entered"]
